{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "World",
            "id": "82c1e364-33f4-4767-b22f-4a562111e6e3",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "70acb676-8f2d-44c7-be3b-bbd67f8d9a5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "7c5746f7-5ee1-4a9a-99fc-149b4c5d246d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "ceb661b0-a1cb-4afd-874e-b7c2572bcea2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "51e44dfd-e90a-423e-a232-356cf3b0c8aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cbe20260-5793-4180-8f3f-7846b37f5bb1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27c98a39-7705-42ea-9d19-75fe6b7f2c72",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee612c77-7486-4019-90c2-39305f9605f1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d240d5a-c0a4-4875-a6dc-24a3d1360c96",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "dd5f5e01-81bb-4a8b-9c15-7b4464eb80f3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "a5f6f769-d512-4fc5-9c35-93ad1be75413",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27ce2383-e424-47bb-848e-39a49976358a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "dd7bec03-5962-4c9f-8913-4a16bd5b1bfe",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "5a64875e-914e-4b2e-8e74-f607abb843ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bebd7dc1-4811-49c9-a13d-1e0b06bc8bad",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Start",
            "id": "2cc6b4e6-7d6f-4984-bf5f-296a1f9f9a8c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "bfc96478-4e83-4cde-a7eb-c384fbf656cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "640ecccd-5819-4106-9e17-d243abf01a4f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}